@@ -931,6 +931,9 @@ void processProviderMgrRequests()
  
    _SFCB_ENTER(TRACE_PROVIDERMGR, "processProviderMgrRequests");
 
+   /* SF:3416060 disable signals during startup */
+   sigfillset(&mask);
+   sigprocmask(SIG_SETMASK, &mask, &old_mask);
    startUpProvider("root/interop","$ClassProvider$");
 
 #ifdef SFCB_INCL_INDICATION_SUPPORT
@@ -943,6 +946,7 @@ void processProviderMgrRequests()
 #ifdef HAVE_SLP
    startUpProvider("root/interop","$ProfileProvider$");
 #endif
+   sigprocmask(SIG_SETMASK, &old_mask, NULL);
 
    for (;;) {
       MgrHandler hdlr; 
@@ -962,8 +966,10 @@ void processProviderMgrRequests()
            _SFCB_TRACE(1,("--- Mgr request for %s-%s (%d) from %d", req->nameSpace.data,
                 req->className.data,req->type,requestor));
 
+           sigprocmask(SIG_SETMASK, &mask, &old_mask);
            hdlr = mHandlers[req->type];
            hdlr.handler(&requestor, req);
+           sigprocmask(SIG_SETMASK, &old_mask, NULL);
            
            _SFCB_TRACE(1,("--- Mgr request for %s-%s DONE", req->nameSpace.data,
               req->className.data));
