@@ -714,7 +714,10 @@ int init_sfcBroker()
 
 int uninit_sfcBroker()
 {
-   if (pReg) pReg->ft->release(pReg);
+   if (pReg) {
+     pReg->ft->release(pReg);
+     pReg = NULL;
+   }
    return 0;
 }
 
