@@ -41,6 +41,7 @@ Bugs fixed:
 - 3496061 IndicationSubscription May Be Undeletable
 - 3484083 Exclude SFCBIndicationID
 - 3496383 Faster Return from CBDeliverIndication
+- 3416060 sigsegv in tool_mm_flush()
 
 Changes in 1.3.13
 =================
